# fw4spl-swig

./: .gitignore
fwBinding/: CMakeLists.txt  Properties.cmake
fwBinding/include/fwBinding/: Bundle.hpp  Callback.hpp  Data.hpp  Runtime.hpp  Service.hpp
fwBinding/src/fwBinding/: Bundle.cpp  Data.cpp  Runtime.cpp  Service.cpp
fwBinding/swig/: CMakeLists.txt
fwBinding/swig/node/: CMakeLists.txt  test.js
fwBinding/swig/python/: CMakeLists.txt  fw4spl.i  test.py
